--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     background-color: #fff;
@@ -22,8 +22,8 @@ header {
 
 .flex-left {
     flex-basis: 50%;
-    background-color: rgba(0, 0, 0, 0.87); 
-    color: white; 
+    background-color: rgba(0, 0, 0, 0.87);
+    color: white;
     padding: 20px;
     box-sizing: border-box;
     margin-right: 10px;
@@ -33,6 +33,8 @@ header {
     background-color: #1558d6;
     padding: 20px;
     border-radius: 10px;
+    min-width: 200px;
+    max-height: 120px;
     display: flex;
     align-items: center;
 }
@@ -44,12 +46,27 @@ header {
     margin-right: 20px;
 }
 
-.header-text h1 {
+.first-name {
+    color: #fff;
     margin: 0;
+    font-size: 40px;
+    font-weight: 400;
 }
 
-.header-text p {
-    margin: 5px 0;
+.last-name {
+    color: #fff;
+    margin: 0;
+    margin-left: 25px;
+    font-size: 40px;
+    font-weight: 400;
+}
+
+.role {
+    color: #fff;
+    margin: 0;
+    margin-left: 25px;
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .profile-section {
@@ -63,16 +80,35 @@ header {
     margin-right: 20px;
 }
 
-.contact-info ul, .language ul {
-    list-style-type: none;
-    padding: 0;
+.about h1 {
+    color: #fff;
+    margin: 0;
+    font-size: 32px;
+    font-weight: 400;
 }
 
-.contact-info li, .language li {
+.about p {
+    color: #fff;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.contact-info ul,
+.language ul {
+    list-style-type: disc;
+    padding: 0;
+    margin-left: 25px;
+}
+
+.contact-info li,
+.language li {
     margin-bottom: 10px;
 }
 
-.contact-info li i, .language li i {
+.contact-info li i,
+.language li i {
     color: black;
     margin-right: 10px;
     border-radius: 50%;
@@ -82,11 +118,15 @@ header {
 
 .expertise h2 {
     color: #fff;
+    margin: 0;
+    font-size: 32px;
+    font-weight: 400;
 }
 
 .expertise ul {
-    list-style-type: none;
+    list-style-type: disc;
     padding: 0;
+    margin-left: 25px;
 }
 
 .expertise li {
@@ -100,23 +140,32 @@ header {
 
 .experience h2 {
     background-color: #1558d6;
-    color: #111111;
+    color: #fff;
+    font-size: 32px;
+    font-weight: 400;
     border-radius: 10px;
-    padding: 10px; 
+    padding: 10px;
+    text-align: center;
 }
 
 .education h2 {
     background-color: #1558d6;
-    color: #111111;
+    color: #fff;
+    font-size: 32px;
+    font-weight: 400;
     border-radius: 10px;
-    padding: 10px; 
+    padding: 10px;
+    text-align: center;
 }
 
 .skills-summary h2 {
     background-color: #1558d6;
-    color: #111111;
+    color: #fff;
+    font-size: 32px;
+    font-weight: 400;
     border-radius: 10px;
-    padding: 10px; 
+    padding: 10px;
+    text-align: center;
 }
 
 
@@ -138,20 +187,28 @@ header {
 
 .language h2 {
     color: #fff;
+    margin: 0;
     border: 2px solid #add8e6;
     border-radius: 10px;
-    padding: 10px; 
+    padding: 10px;
+    font-size: 32px;
+    font-weight: 400;
 }
 
 .expertise h2 {
     color: #fff;
+    margin: 0;
     border: 2px solid #add8e6;
     border-radius: 10px;
-    padding: 10px; 
+    padding: 10px;
+    font-size: 32px;
+    font-weight: 400;
 }
 
-h1, h2, h3 {
-    color: #333;
+h1,
+h2,
+h3 {
+    color: #111111;
 }
 
 footer {
